# english_teacher

./: .gitignore  README.md  hello.py  pyproject.toml
coach/: admin.py  dynamic_preferences_registry.py  middleware.py  models.py  services.py  urls.py  views.py
coach/migrations/: 0001_initial.py  0002_alter_lesson_conversational_practice.py  0003_book.py  0004_userprogress_practice_time_minutes_and_more.py  0005_userprogress_current_streak_and_more.py  0006_generationtask.py  0007_lesson_user_alter_lesson_topic.py  0008_alter_book_content_chapter.py
config/: settings.py  urls.py
static/: manifest.json
static/js/: serviceworker.js  sw.js
templates/: admin_book_preview.html  admin_generate_book.html  base.html  book_detail.html  conversation.html  generation_loading.html  home.html  lesson_detail.html  lesson_form.html  lesson_list.html  library.html  progress.html
templates/account/: login.html  signup.html
